Fix signup continue button shift and enable Turbo stream updates via ActionCable mount

--- a/app/assets/stylesheets/auth/signup/_index.scss
+++ b/app/assets/stylesheets/auth/signup/_index.scss
@@ -6,13 +6,6 @@
 
     .submit {
       margin: 2rem 0 0 0;
-
-      .link.primary {
-        align-items: center;
-        display: inline-flex;
-        line-height: 1.5rem;
-        min-height: 1.5rem;
-      }
     }
 
     .checkbox {
